--- a/otto_simulation/config/joints_controller.yaml
+++ b/otto_simulation/config/joints_controller.yaml
@@ -17,13 +17,13 @@ controller_manager:
 effort_controller:
   ros__parameters:
     joints: 
-      - hip_jointL
-      - knee_jointL
-      - virtualhip_jointL
+      # - hip_jointL
+      # - knee_jointL
+      # - virtualhip_jointL
       - wheel_jointL
-      - hip_jointR
-      - knee_jointR
-      - virtualhip_jointR
+      # - hip_jointR
+      # - knee_jointR
+      # - virtualhip_jointR
       - wheel_jointR
 
 velocity_controller:
